# geotail

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: README.md
scripts/: render_tui_screenshot.py
src/geotail/: __init__.py  cli.py  engine.py  models.py  parsers.py  report.py  stats.py  tui.py
src/geotail/providers/: __init__.py  base.py  fake.py  ip2location.py
tests/: test_cli.py  test_engine.py  test_models.py  test_parsers.py  test_report.py  test_stats.py  test_tui.py
tests/providers/: test_base.py  test_fake.py  test_ip2location.py
